# QurAI-

./: .gitignore  Makefile  README.md  qubo.ipynb  qubo_BOA.ipynb  qubo_cost.ipynb  requirements.txt  test_patients.csv
Optimization/: optimization.md  qubo_BOA.ipynb
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  sample_patients.csv
backend/alembic/: env.py
backend/alembic/versions/: 585911eb82e2_remove_patient_id_unique_constraint.py  f413176dafd4_add_encryption_to_sensitive_patient_.py
backend/app/: database.py  main.py  migrations.py
backend/app/models/: patient.py
backend/app/security/: encryption.py
backend/migrations/versions/: 6bb95061cf71_initial_migration.py
backend/models/: patient.py
backend/templates/: dashboard.html  index.html
backend/tests/: __init__.py  conftest.py  test_main.py
classification:/: Qsvm_workingmodule.ipynb  classifier_data_pennylane.ipynb  feature_map.pkl  qsvc_model.pkl  scaler.pkl
frontend/: about.html  dashboard.html  index.html
