[tool.poetry]
name = "qur-ai-backend"
version = "0.1.0"
description = "Backend API for QurAI cancer patient management system"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
alembic = "^1.7.1"
pandas = "^1.3.3"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
httpx = "^0.19.0"
pytest-asyncio = "^0.15.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 