[tool.poetry]
name = "cancer-classification-api"
version = "0.1.0"
description = "API for cancer classification system"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-cors = "^4.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.2"
qiskit-machine-learning = "^0.8.2"
qiskit = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 